# lol-quotes

./: .gitignore  Cargo.toml  LICENSE  README.md  champions.json  quotes.json
migrations/: 20220101205100_initial.sql
src/: champions.rs  db.rs  ddragon.rs  error.rs  lib.rs  main.rs  webhooks.rs
src/commands/: champions.rs  iam.rs  mod.rs  setrate.rs  whoami.rs  whois.rs
